JumpScript/tests/baselines/reference/nullKeyword.errors.txt
tests/cases/compiler/nullKeyword.jump(1,1): error TS2531: Object is possibly 'null'.


==== tests/cases/compiler/nullKeyword.jump (1 errors) ====
    null.foo;
    ~~~~
!!! error TS2531: Object is possibly 'null'.